# resona

./: .dockerignore  .env.example  .gitignore  404.html  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.gpu  LICENSE  README.md  RELEASING.md  Resona.html  conftest.py  data  docker-compose.cpu.yml  docker-compose.resona.yml  docker-compose.yml  index.html  justfile  mkdocs.yml  netlify.toml  objects.inv  pyproject.toml  run.py  sitemap.xml
.github/workflows/: deploy-docs.yml  docker-build.yml  release.yml  test.yml
.superpowers/brainstorm/1487247-1775200476/content/: architecture-overview.html  architecture-resona.html  component-local-engine.html  component-postprocess-llm.html  component-postprocess.html  component-transcriber-protocol.html  phase1-complete.html
apps/cli/: pyproject.toml
apps/cli/src/ws_cli/: backends.py  batch.py  ui.py  (+5 more)
apps/cli/tests/: test_batch.py  test_local_engine.py  test_micrec.py  test_watch.py
apps/resona-cli/: README.md  pyproject.toml
apps/resona-cli/src/resona_cli/: backends.py  batch.py  benchmark_select.py  engine.py  engines.py  live.tcss  live_ui.py  local_engine.py  main.py  markdown_output.py  micrec.py  profiles.py  prompts.py  recorder.tcss  remote_live.py  replacements.py  speech.py  submit.py  transcribe.py  ui.py  watch.py
apps/resona-cli/src/resona_cli/css/: ui.tcss
apps/resona-cli/tests/: test_backends.py  test_batch.py  test_cloud_engine.py  test_engine.py  test_engines.py  test_extras.py  test_live_engine.py  test_live_resample.py  test_local_engine.py  test_micrec.py  test_profiles_cli.py  test_remote_live.py  test_speech.py  test_submit.py  test_transcribe.py  test_watch.py
apps/web/: dictaphone-db.js  dictaphone-sw.js  dictaphone.html  live.html  manifest.json
architecture/engine-contract/: index.html
architecture/job-lifecycle/: index.html
architecture/overview/: index.html
architecture/postprocessing/: index.html
benchmarks/: README.md  _datasets.py  _diagnose.py  _hardware.py  _metrics.py  transcription_benchmark.py
benchmarks/results/: benchmark_20260615_213406.json  benchmark_20260615_213406.md
configuration/config-files/: index.html
configuration/environment/: index.html
development/adding-engine/: index.html
development/testing/: index.html
development/workflow/: index.html
directus/: bootstrap.md  schema-snapshot.yaml
docs/: architecture.md  cli.md  getting-started.md  index.md  onboarding.md
docs/architecture/: engine-contract.md  job-lifecycle.md  overview.md  postprocessing.md
docs/configuration/: backends.md  config-files.md  engines.md  environment.md
docs/development/: adding-engine.md  testing.md  workflow.md
docs/getting-started/: installation.md  local-only.md  quick-start.md
docs/guide/: cli.md  engines.md  postprocessing.md  privacy.md  replacements.md  tts.md
docs/reference/: api.md  asr-core.md  client.md  cloud-stt.md  cloud-tts.md  engine-server.md  engine.md  postprocess.md  ws-api.md  ws-engine.md
docs/server/: docker.md  full-stack.md
docs/superpowers/plans/: 2026-03-30-local-engine-fallback.md  2026-04-03-resona-phase1-foundation.md  2026-05-14-workspace-restructure.md  2026-05-15-backend-engine-rename.md  2026-05-15-cloud-engines-private.md  2026-05-15-faster-whisper-drop-torch.md  2026-05-15-stabilize-pytorch-dependency.md  2026-05-16-collapse-install-profiles.md  2026-05-16-unified-stt-tts-api.md  2026-05-17-cli-client-gaps.md  2026-05-17-postprocessing-profiles.md  2026-06-17-directus-transcribe-backend.md  2026-06-18-resona-pwa-frontend.md  2026-06-20-decouple-directus-pwa.md
docs/superpowers/specs/: 2026-03-30-local-engine-fallback-design.md  2026-04-03-resona-architecture-redesign.md  2026-05-15-cloud-engines-private-design.md  2026-05-16-collapse-install-profiles-design.md  2026-05-16-unified-stt-tts-api-design.md  2026-05-17-cli-client-gaps-design.md  2026-05-17-mkdocs-full-rewrite-design.md  2026-05-17-postprocessing-profiles-design.md  2026-06-17-pwa-directus-platform-design.md  2026-06-24-piper-tts-fallback-design.md
getting-started/installation/: index.html
getting-started/local-only/: index.html
getting-started/quick-start/: index.html
guide/cli/: index.html
guide/engines/: index.html
guide/postprocessing/: index.html
guide/privacy/: index.html
guide/replacements/: index.html
guide/tts/: index.html
reference/api/: index.html
reference/asr-core/: index.html
reference/client/: index.html
reference/cloud-stt/: index.html
reference/cloud-tts/: index.html
reference/engine-server/: index.html
reference/postprocess/: index.html
search/: search_index.json
server/docker/: index.html
server/full-stack/: index.html
src/: BackgroundTasks.py  app.py  model.py  paths.py  utils.py
src/api/: app.py  endpoints.py
src/cli/: prompts.py  replacements.py
src/core/: paths.py  presets.py  replacements.py
src/core/db/: engine.py  models.py  utils.py
src/db/: engine.py  models.py  utils.py
src/processing/: formatting.py  tasks.py  transcriber_fast_whisper.py  transcriber_transformer.py  transcriber_whisper.py  utils.py
src/recorder/: README.md  micrec.py  recorder.tcss
src/whisper_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ws_cli/: main.py  prompts.py  replacements.py
src/ws_live/: main.py  ui.py
src/ws_live/css/: style.tcss
src/ws_server/: run.py
src/ws_server/api/: app.py  auth.py  endpoints.py  ws_live.py  ws_transcribe.py
src/ws_server/db/: models.py
src/ws_server/processing/: formatting.py  live_transcriber.py  postprocessing.py  postprocessing_markdown.py  task_scan_inbox.py  tasks.py  tasks_transcribe.py  transcriber_factory.py  transcriber_fast_whisper.py  transcriber_transformer.py  transcriber_transformer2.py  transcriber_whisper.py  utils.py
src/ws_ui/: main.py  ui.py
src/ws_ui/css/: style.tcss
tests/: conftest.py  test.http  test_api.py  test_live_transcriber.py  test_live_transcriber_dynamic.py  test_security.py  test_transcriber.py  test_websocket.py  test_ws_live.py
webapp/: dictaphone-sw.js  dictaphone.html  manifest.json
(+2 files in other folders)
