[project]
name = "resona-workspace"
version = "0.1.0"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["packages/*", "apps/resona-cli"]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]

[tool.uv.extra-build-dependencies]
openai-whisper = ["setuptools", "wheel"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "respx>=0.21.1",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    # TUI test deps — required so test_micrec runs in the workspace dev env
    # (these are optional in resona-cli, but workspace devs want full coverage)
    "textual>=3.2.0",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.1",
    "numpy>=2.1.3",
    "soxr>=0.5",
]
