[project]
name = "resona-workspace"
version = "0.1.0"
requires-python = ">=3.12"

[tool.uv]
# lightning-whisper-mlx pins tiktoken==0.3.3, which collides with the newer
# tiktoken litellm (resona-postprocess) needs. Newer tiktoken is backward
# compatible with Whisper's tokenizer use, so relax the pin workspace-wide.
override-dependencies = ["tiktoken>=0.7"]

[tool.uv.workspace]
members = ["packages/*", "apps/resona-cli"]

# pytorch-cu130 is declared here so workspace dev (`uv sync --all-packages`)
# resolves torch to the CUDA wheels for engine-whisper / engine-voxtral. It is
# also declared in apps/resona-cli/pyproject.toml so it travels with
# `uv tool install --from ./apps/resona-cli` — workspace-level indexes do not.
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
# CUDA wheels only exist for Linux. On macOS/Windows, fall back to the default
# PyPI index (CPU/MPS wheels) so `uv sync --all-packages` resolves there too.
torch = [{ index = "pytorch-cu130", marker = "sys_platform == 'linux'" }]

# openai-whisper's setup.py imports `pkg_resources`, which setuptools 81 (Feb 2026)
# removed. Pin the build env to setuptools<81 until upstream openai-whisper migrates
# off pkg_resources. Tracked at: https://github.com/openai/whisper/discussions/2410
[tool.uv.extra-build-dependencies]
openai-whisper = ["setuptools<81", "wheel"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "respx>=0.21.1",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    # TUI test deps — required so test_micrec runs in the workspace dev env
    # (these are optional in resona-cli, but workspace devs want full coverage)
    "textual>=3.2.0",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.1",
    "numpy>=2.1.3",
    "soxr>=0.5",
]
