[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resona-cli"
version = "0.1.0"
description = "CLI tool for Resona transcription platform"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "typer>=0.15.3",
    "python-dotenv>=1.1.0",
    "python-decouple>=3.8",
    "resona-client",
    "resona-cloud-stt",
    "resona-postprocess",
]

[project.optional-dependencies]
record = [
    "textual>=3.2.0",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.1",
    "numpy>=2.1.3",
]
live = [
    "textual>=3.2.0",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.1",
    "numpy>=2.1.3",
    "soxr>=0.5",
    "resona-asr-core",
]
faster-whisper = [
    "resona-asr-core",
    "resona-engine-faster-whisper",
]
whisper = [
    "resona-asr-core",
    "resona-engine-whisper",
]
voxtral = [
    "resona-asr-core",
    "resona-engine-voxtral",
]

[tool.uv.sources]
resona-client = { workspace = true }
resona-cloud-stt = { workspace = true }
resona-postprocess = { workspace = true }
resona-asr-core = { workspace = true }
resona-engine-faster-whisper = { workspace = true }
resona-engine-whisper = { workspace = true }
resona-engine-voxtral = { workspace = true }

[project.scripts]
resona = "resona_cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/resona_cli"]
